--- a/frontend/admin/data_peserta/daftar_group.html
+++ b/frontend/admin/data_peserta/daftar_group.html
@@ -348,7 +348,7 @@
                                     </div>
                                 </div>
                                 <div class="card-body">
-                                    <div class="d-flex ">
+                                    <div class="d-flex">
                                         <button class="btn btn-primary btn-round ml-auto mb-3" data-toggle="modal"
                                             data-target="#addRowModal">
                                             Tambah Group
@@ -480,9 +480,11 @@
     <!-- Datatables -->
     <script src="/assets/js/plugin/datatables/datatables.min.js"></script>
 
-
     <!-- Atlantis JS -->
     <script src="/assets/js/atlantis.min.js"></script>
+
+    <!-- Sweet Alert -->
+    <script src="/assets/js/plugin/sweetalert/sweetalert.min.js"></script>
 
     <!-- Atlantis DEMO methods, don't include it in your project! -->
     <script src="/assets/js/setting-demo.js"></script>
