--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -129,7 +129,6 @@
             </nav>
             <!-- End Navbar -->
         </div>
-
         <!-- Sidebar -->
         <div class="sidebar sidebar-style-2">
             <div class="sidebar-wrapper scrollbar scrollbar-inner">
@@ -301,7 +300,6 @@
             </div>
         </div>
         <!-- End Sidebar -->
-
         <div class="main-panel">
             <div class="content">
                 <div class="page-inner">
@@ -389,28 +387,9 @@
             </div>
             <footer class="footer">
                 <div class="container-fluid">
-                    <nav class="pull-left">
-                        <ul class="nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://www.themekita.com">
-                                    ThemeKita
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">
-                                    Help
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">
-                                    Licenses
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
                     <div class="copyright ml-auto">
-                        2018, made with <i class="fa fa-heart heart text-danger"></i> by <a
-                            href="https://www.themekita.com">ThemeKita</a>
+                        2022, made with <i class="fa fa-heart heart text-danger"></i> by <a
+                            href="https://www.unimma.ac.id">Biro Sistem Informasi</a>
                     </div>
                 </div>
             </footer>
